WIP - use component is to get around spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -936,6 +936,7 @@ button {
   border: 1px solid #ccc;
   background: #eee;
   margin: 0px auto;
+  margin-top: 5px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
